apps/malefstorm/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
      - name: registry-creds
      containers:
      - image: egistry.malefstorm.ru/malefstudio/landing:latest
        name: landing
        
        ports:
        - containerPort: 80
        resources: {}
status: {}
