apps/malefstorm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: malefstorm.ru
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - malefstorm.ru
    secretName: nginx-staging-tls
status:
  loadBalancer: {}
